Fixed permanent horizontal scrollbar

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   background-color: $trans-purple;
   z-index: 99; // Ensure the header is above other content
 
