--- a/styles/pages/_about-us.scss
+++ b/styles/pages/_about-us.scss
@@ -7,11 +7,11 @@
         position: relative;
         z-index: 1;
         display: flex;
-        width: 100vw;
-        height: calc(100vh / 2);
-        background-image: linear-gradient(to bottom, transparent 25%, $very-light-grey 100%), url("https://res.cloudinary.com/dnmr13rcg/image/upload/f_auto,q_auto/large_man_plays_chess_with_robot_16882f0e0d");
-        background-position-y: 70%;
+        width: 100%;
+        height: 100vh;
+        background-image: linear-gradient(to bottom, transparent 0%, $very-light-grey 100%), url("https://res.cloudinary.com/dnmr13rcg/image/upload/f_auto,q_auto/large_man_plays_chess_with_robot_16882f0e0d");
         background-size: 100% auto;
+        background-repeat: no-repeat;
 
         .about-us-page-title {
             width: 100%;
@@ -23,7 +23,7 @@
     
             h1 {
                 margin-top: 20px;
-                font-size: calc(100vw / 30);
+                font-size: 60px;
                 font-weight: 600;
                 color: $white;
             }
@@ -49,7 +49,7 @@
     .about-us-profile-container {
         position: relative;
         z-index: 2;
-        margin-top: calc(-100vh / 4);
+        margin-top: calc(-100vh / 1.5);
         margin-bottom: 20px;
         margin-left: auto;
         margin-right: auto;
@@ -105,24 +105,24 @@
     .aboutuspage {
         .about-us-page-title-container {
             margin-top: -70px;
-            height: calc(100vh / 3);
-            background-size: 125% auto;
+            height: 100vh;
+            background-size: 150% auto;
 
             .about-us-page-title {
                 padding-top: 70px;
+
                 h1 {
-                    font-size: calc(100vw / 15);
+                    font-size: 32px;
                 }
                 .about-us-page-title-divider h3 {
-                    font-size: 16px;
+                    font-size: 18px;
                 }
             }
         }
 
         .about-us-profile-container {
             max-width: 90%;
-            padding: 30px;
-            margin-top: 0;
+            margin-top: calc(-100vh / 2);
     
             .about-us-profile {
                 flex-direction: column;
